--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/twitterController.js"></script>
         <script src="scripts/services/twitterService.js"></script>
+        <script src="scripts/services/wallService.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
