Add refreshing filter

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
         <script src="scripts/controllers/twitterController.js"></script>
         <script src="scripts/services/twitterService.js"></script>
         <script src="scripts/services/wallService.js"></script>
+        <script src="scripts/filters/refreshing.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
