--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
         <script src="scripts/services/twitterService.js"></script>
         <script src="scripts/services/wallService.js"></script>
         <script src="scripts/filters/refreshing.js"></script>
+        <script src="scripts/directives/animate.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
